<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_height="wrap_content"
        android:id="@+id/textViewInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextHeight"
        android:hint="@string/yourHeight"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textViewInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextMass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/yourMass"
        android:layout_below="@+id/editTextHeight"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/button"
        android:layout_below="@+id/editTextMass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true" />

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourBmiInfo"
        android:id="@+id/textViewBmiInfo"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewCategory"
        android:layout_below="@+id/textViewBmiInfo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/silhouette_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/index"
        android:id="@+id/textViewIndex"
        android:layout_alignTop="@+id/imageViewCategory"
        android:layout_toEndOf="@+id/textViewBmiInfo"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="-20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category"
        android:id="@+id/textViewCategory"
        android:layout_below="@+id/textViewIndex"
        android:layout_alignStart="@+id/textViewIndex"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enterInfo"
        android:id="@+id/textViewIndexWaarde"
        android:layout_above="@+id/textViewCategory"
        android:layout_toEndOf="@+id/textViewIndex"
        android:layout_marginStart="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enterInfo"
        android:id="@+id/textViewCategoryWaarde"
        android:layout_alignBottom="@+id/textViewCategory"
        android:layout_toEndOf="@+id/textViewIndex"
        android:layout_marginStart="35dp"/>

</RelativeLayout>
